[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tud_sumo"
version = "1.0.0"
description = "TU Delft SUMO wrapper"
readme = "README.md"
authors = [{ name = "Callum Evans", email = "c.evans@tudelft.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "traci", "matplotlib", "tqdm",
]