[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tud-sumo"
dynamic = ["version"]
description = "TU Delft SUMO wrapper"
readme = "README.md"
authors = [{ name = "Callum Evans", email = "c.evans@tudelft.nl" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "mpl-tools",
    "numpy",
    "requests",
    "shapely",
    "tqdm",
    "traci",
]
keywords = ["traffic simulator", "microscopic", "SUMO"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Documentation = "https://tud-sumo.github.io/docs/"
Repository = "https://github.com/tud-sumo/tud-sumo"
"Example Code" = "https://github.com/tud-sumo/example"

[tool.hatch.version]
path = "tud_sumo/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/tud_sumo",
]
